<resources>
    <string name="app_name">C\'Ville Artfinder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="category">Category:</string>
    <string name="secondary_category">Secondary Category:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="view_on_map">View on Map</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="time">Time</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="event_added_to_calendar">Event Added to Calendar</string>
    <string name="directions">Directions</string>
    <string name="starting_point">My Location</string>
    <string name="destination">Destination</string>
    <string name="get_directions">Get Directions</string>
    <string name="parking_garages">Parking Garages</string>
    <string name="notice">Notice</string>
    <string name="map_notice">This application launches Google Maps for directions.</string>
    <string name="dance">Dance</string>
    <string name="film">Film</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="other">Other</string>
    <string name="theatre">Theatre</string>
    <string name="map">Map</string>
    <string name="venues">Venues</string>
    <string name="events">Events</string>
    <string name="transportation">Transportation</string>
    <string name="cat_app">Charlottesville Area Transit</string>
    <string name="get_cat_app">Get CAT App</string>
    <string name="about">About</string>
    <string name="libraries">Libraries</string>
    <string name="library_description">
        For image loading, C\'Ville Artfinder uses Picasso image loading library by Square, Inc. licensed under the
        Apache License, Version 2.0 (reporduced below).
    </string>
    <string name="about_details">
        \t\tCharlottesville Artfinder\'s purpose is to improve the accessibility to the arts in Charlottesville, 
        Virginia. This app was created within the context of the Tom Tom\'s Tomtoberfest \"Apps That Matter\" competition, which is 
        sponsored by WillowTree Apps, a leader in the industry located on the downtown mall in Charlottesville. Within the competition, 
        HooApps, a student-run club at the University of Virginia, partnered with Piedmont Council for the Arts (PCA) to create an app to 
        support PCA\'s mission by empowering them with a presence in the mobile industry. The data that populates the app is owned and 
        managed by PCA.</string>
	<string name="about_pca">
        \t\tPiedmont Council for the Arts (PCA) is the designated arts agency of Charlottesville and Albemarle. PCA encourages community-wide 
        access to and appreciation for the arts through programs and services for artists, arts organizations, and their audiences. 
        The PCA website provides the most comprehensive arts-related information in the area as we work to inform residents and visitors 
        about cultural resources and to showcase the Charlottesville region as an arts destination.</string>
	<string name="cat_description">
	    CAT is a comprehensive public transportation system that services all of Charlottesville. Search for "Charlottesville Area Transit" 
	    in the PlayStore or tap the icon to download their free app. For more information about parking or the CAT, visit 
	    charlottesvilleparking.com or charlottesville.org/transit.
	</string>
</resources>