<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/address_container"
            style="@style/module_container" >

            <TextView
                style="@style/module_header_text"
                android:text="@string/directions" />

            <AutoCompleteTextView
                android:id="@+id/start_auto_comp"
                style="@style/module_body_text"
                android:hint="@string/starting_point" />

            <AutoCompleteTextView
                android:id="@+id/destination_auto_comp"
                style="@style/module_body_text"
                android:hint="@string/destination" />

            <View style="@style/divider" />

            <Button
                android:id="@+id/get_directions_button"
                style="@style/module_button"
                android:text="@string/get_directions" />
        </LinearLayout>

        <LinearLayout
            style="@style/module_container" >
            
            <TextView
                style="@style/module_header_text"
                android:text="@string/parking_garages" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <LinearLayout style="@style/module_container" >

            <TextView
                style="@style/module_header_text"
                android:text="@string/notice" />

            <TextView
                style="@style/module_body_text"
                android:text="@string/map_notice" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>