<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- About Description -->
        <LinearLayout
            style="@style/module_container" >

            <TextView
                style="@style/module_header_text"
                android:text="@string/about" />

            <TextView
                style="@style/module_body_text"
                android:text="@string/about_details" />
            
            <TextView
                style="@style/module_body_text"
                android:text="@string/about_pca" />
        </LinearLayout>
        
        <!-- Libraries -->
        <LinearLayout
            style="@style/module_container" >

            <TextView
                style="@style/module_header_text"
                android:text="@string/libraries" />

            <TextView
                style="@style/module_body_text"
                android:text="@string/library_description" />
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>