<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo_trimmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
    
    <Button
        style="@style/button_base"
        android:id="@+id/map_button"
        android:text="@string/map"
        android:background="@drawable/green_item_bg" />
    
    <Button
        style="@style/button_base"
        android:id="@+id/venue_button"
        android:text="@string/venues"
        android:background="@drawable/orange_item_bg" />
    
    <Button
        style="@style/button_base"
        android:id="@+id/event_button"
        android:text="@string/events"
        android:background="@drawable/blue_item_bg" />
    
    <Button
        style="@style/button_base"
        android:id="@+id/transportation_button"
        android:text="@string/transportation"
        android:background="@drawable/purple_item_bg" />

</LinearLayout>